# DSM_V2.0

./: .gitignore  README.txt  config.example.toml  pyproject.toml  pyrightconfig.json  tuncore.pyi
.github/workflows/: ci.yml
deploy/: CA_RUNBOOK.md  SMOKE_TEST.md  dsm.service  openssl-ca.cnf  two_box_runbook.md
dsm/: __main__.py  client.py  rekey.py  server.py  session.py
dsm/core/: atomic_io.py  config.py  fsm.py  log.py  netaudit.py  passphrase.py  path_security.py  protocol.py  rand.py
dsm/crypto/: attest.py  attest_store.py  auth_loader.py  authorized_clients.py  cert.py  cert_allowlist.py  crl.py  enroll.py  handshake.py  keystore.py
dsm/net/: dns.py  dns_pinning.py  dns_proxy.py  forwarding.py  nftables.py  resolv_conf.py  tunnel.py
dsm/net/transport/: _fwmark.py  tcp.py  udp.py
dsm/traffic/: scheduler.py  shaper.py
nftables/: nftables.conf  server.conf
rust/tuncore/: Cargo.toml
rust/tuncore/src/: aes_gcm.rs  device_attest.rs  device_attest_soft.rs  identity.rs  lib.rs  noise_xx.rs  nonce.rs  replay_window.rs  secure_memory.rs  session_keys.rs
tests/: cert_helpers.py  test_attest.py  test_authorized_clients.py  test_auto_mtu.py  test_bootstrap_handshake.py  test_cert.py  test_cert_allowlist.py  test_cli.py  test_config.py  test_crl.py  test_data_path_integration.py  test_dns_padding.py  test_dns_pinning.py  test_dns_proxy.py  test_dns_proxy_coalescing.py  test_enroll.py  test_fragmenter.py  test_fsm.py  test_handshake.py  test_handshake_integration.py  test_handshake_retry_outage.py  test_keystore.py  test_netaudit.py  test_protocol.py  test_shaper.py  test_symmetric_shaping.py  test_tunnel_ipv6.py  test_udp_pmtu.py
