[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dsm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "cryptography>=42,<46",
    "dnspython>=2.6,<3.0",
]

[project.scripts]
dsm = "dsm.__main__:main"

[tool.maturin]
python-source = "."
module-name = "tuncore"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
