[package]
name = "dsm-tuncore"
version = "0.1.0"
edition = "2021"

[lib]
name = "tuncore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
snow = "0.9"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
libc = "0.2"
subtle = "2"
hmac = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
